# my-style-be

./: .env_example  .gitignore  Cargo.toml  README.md
_diesel_migrations/2023-02-20-000627_users/: up.sql
_diesel_migrations/2023-02-20-002358_outfits/: down.sql  up.sql
_diesel_migrations/2023-02-20-003322_closets/: down.sql  up.sql
_diesel_migrations/2023-02-20-003509_worn_items/: down.sql  up.sql
_diesel_migrations/2023-02-20-003935_seasons/: down.sql  up.sql
_diesel_migrations/2023-02-20-004726_clothing_items/: down.sql  up.sql
_diesel_migrations/2023-02-20-005256_tags/: up.sql
_diesel_migrations/2023-02-20-010045_tags_users/: down.sql  up.sql
_diesel_migrations/2023-02-20-010128_tags_clothing_items/: down.sql  up.sql
_diesel_migrations/2023-02-20-010215_outfits_clothing_items/: down.sql  up.sql
_diesel_migrations/2023-02-20-011712_outfits_users/: down.sql  up.sql
_diesel_migrations/2023-02-20-013930_outfits_seasons/: down.sql  up.sql
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table_user.rs
src/: _diesel_schema.rs  main.rs
src/api/: user.rs
