[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
chrono = "0.4.23"
diesel = { version = "2.0.3", features = ["postgres", "r2d2"] }
dotenvy = "0.15.6"
dotenvy_macro = "0.15.1"
env_logger = "0.10.0"
futures= "0.3.21"
log = "0.4.17"
sea-orm = { version = "^0.11", features = [ "sqlx-postgres", "runtime-actix-native-tls", "macros", "with-chrono", "with-json", "with-uuid", "postgres-array", "mock" ] }
serde = { version = "1.0.152", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
uuid = "1.3.0"

